--- a/MAAS/html/TEACHER/Teacher_home.html
+++ b/MAAS/html/TEACHER/Teacher_home.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+    .jumbotron{
+      background-color: #2E2D88;
+      color: white
+    }
+  </style>
 </head>
 <body>
 <nav class="navbar navbar-inverse bg-light">
@@ -16,22 +22,25 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="Teacher_home.html">Home</a></li>
-        <li><a href="#">Attendance</a></li>
-      <li><a href="#">Collegiate/Non-Collegiate</a></li>
-      <li><a href="#">Application</a></li>
+        <li><a href="attendance.html">Attendance</a></li>
+      <li><a href="collegiate.html">Collegiate/Non-Collegiate</a></li>
+      <li><a href="application.html">Application</a></li>
       
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
      
-      <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+      <li><a href="E:\Level-4\CSE-360(IDP)\MAAS_WEB-master\MAAS\login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
   
+<div class="jumbotron">
+  <h3><center>Welcome to Teacher Dashboard!!!</center></h3>
+ 
+</div>
 <div class="container">
-  <h3>Welcome to Teacher Dashboard</h3>
-  <p>The .navbar-right class is used to right-align navigation bar buttons.</p>
+  <h3><center>Hello Mr. X</center></h3>
 </div>
 
 </body>
