SADD 1st Presentation

--- a/MAAS/html/STUDENT/attendance.html
+++ b/MAAS/html/STUDENT/attendance.html
@@ -32,7 +32,7 @@
 <div class="container">
   <h2>View Attendance</h2>
 
-   <form class="form-horizontal" action="attendance_show.html">
+   <form class="form-horizontal" >
     
 
 
