--- a/MAAS_web_implementation/html/STUDENT/attendance.html
+++ b/MAAS_web_implementation/html/STUDENT/attendance.html
@@ -40,19 +40,19 @@
 
         <h3>MAAS</h3>
         <ul class="list-unstyled components mb-5">
-          <li class="active">
+          <li class="active cl_hover_btn">
             <a href="student_main.html"><span class="fa fa-home"></span> Home</a>
           </li>
-          <li>
+          <li class="active cl_hover_btn active_btn">
               <a href="attendance.html"><span class="fa fa-address-card-o"></span> Attendance</a>
           </li>
-          <li>
+          <li class="active cl_hover_btn">
             <a href="eligibility.html"><span class="fa fa-table"></span> Eligibility</a>
           </li>
-          <li>
+          <li class="active cl_hover_btn">
             <a href="fine.html"><span class="fa fa-money"></span> Fine</a>
           </li>
-          <li>
+          <li class="active cl_hover_btn">
             <a href="apply_application.html"><span class="fa fa-file-text-o"></span> Application</a>
           </li>
         </ul>
