--- a/MAAS_web_implementation/html/ADMIN/view_classwise_attendance.html
+++ b/MAAS_web_implementation/html/ADMIN/view_classwise_attendance.html
@@ -42,7 +42,7 @@
 
         <h3>MAAS</h3>
         <ul class="list-unstyled components mb-5">
-          <li class="active">
+          <li class="active cl_hover_btn">
             <a href="Admin_Home.html"><span class="fa fa-home"></span> Home</a>
           </li>
 
@@ -50,10 +50,10 @@
          <li>
              <a href="#page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span class="fa fa-list-alt"></span> Attendance</a>
               <ul class="collapse list-unstyled" id="page">
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="view_individual_attendance.html">PERSON</a>
                 </li>
-                <li>
+                <li class="active cl_hover_btn active_btn">
                     <a href="view_classwise_attendance.html">CLASS</a>
                 </li>
               
@@ -65,13 +65,13 @@
           <li>
              <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span class="fa fa-users"></span> User</a>
               <ul class="collapse list-unstyled" id="pageSubmenu">
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="add_new_add.html">ADD</a>
                 </li>
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="add_new_update.html">UPDATE</a>
                 </li>
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="add_new_delete.html">DELETE</a>
                 </li>
               </ul>
@@ -81,13 +81,13 @@
               <li>
              <a href="#pageSub" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span class="fa fa-columns"></span> Routine</a>
               <ul class="collapse list-unstyled" id="pageSub">
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="routine_add.html">ADD</a>
                 </li>
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="routine_update.html">UPDATE</a>
                 </li>
-                <li>
+                <li class="active cl_hover_btn">
                     <a href="routine_delete.html">DELETE</a>
                 </li>
               </ul>
