--- a/MAAS_web_implementation/html/TEACHER/Teacher_home.html
+++ b/MAAS_web_implementation/html/TEACHER/Teacher_home.html
@@ -43,17 +43,17 @@
 
         <h3><a href="index.html" class="logo">MAAS</a></h3>
         <ul class="list-unstyled components mb-5">
-          <li class="active">
+          <li class="active cl_hover_btn active_btn">
             <a href="Teacher_home.html"><span class="fa fa-home"></span> Home</a>
           </li>
-          <li>
+          <li class="active cl_hover_btn">
               <a href="attendance.html"><span class="fa fa-address-card-o"></span> Attendance</a>
           </li>
-          <li>
+          <li class="active cl_hover_btn">
             <a href="collegiate.html"><span class="fa fa-table"></span> Eligibility</a>
           </li>
           
-          <li>
+          <li class="active cl_hover_btn">
             <a href="application.html"><span class="fa fa-file-text-o"></span> Application</a>
           </li>
         </ul>
