--- a/MAAS_web_implementation/html/ADMIN/Admin_Home.html
+++ b/MAAS_web_implementation/html/ADMIN/Admin_Home.html
@@ -135,16 +135,17 @@
 
               <ul class="nav navbar-nav navbar-right">
 
-                <li class="nav-item">
-                    <a href="Admin_Home.html"><h4><span class="fa fa-user-circle"></span> Mr. X</h4></a>
-                </li>
-
-
-                <li class="nav-item">
+               <ul class="nav navbar-nav navbar-right">
+                 <li class="nav-item">
                    <!-- <a class="nav-link" href="Teacher_home.html"><h4><span class="fa fa-phone">Contact</h4></a>-->
                     <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
                 </li>
-                <li><a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a></li>
+                 <li class="nav-item">
+                    <a href="student_main.html"><h4><div id="kickoff1"> </div> </h4></a>
+                </li>
+                <li>
+                  <a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a>
+                </li>
               </ul>
 
             </div>
@@ -158,7 +159,7 @@
         	</div>
 
        <h1><center><span class="fa fa-user-circle fa-4x" style="color: #01004D;"></span></center></h1>
-       <h2><center>Good Morning!!! Mr. X<br>Hope you are having a good day!!<i class="fa fa-smile-o" aria-hidden="true"></i></center></h2>
+       <h2><center> <div id="kickoff2"> </div>Hope you are having a good day!!<i class="fa fa-smile-o" aria-hidden="true"></i></center></h2>
        
 
         </div>
@@ -166,6 +167,8 @@
         
       </div>
 		</div>
+    <script src="js/Admin_home.js"></script>
+    <script src="../../js/basic.js"></script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
