--- a/MAAS_web_implementation/html/ADMIN/routine_add.html
+++ b/MAAS_web_implementation/html/ADMIN/routine_add.html
@@ -158,16 +158,18 @@
 
               <ul class="nav navbar-nav navbar-right">
 
-                <li class="nav-item">
-                    <a href="Admin_Home.html"><h4><span class="fa fa-user-circle"></span> Mr. X</h4></a>
-                </li>
-
-
-                <li class="nav-item">
+                <ul class="nav navbar-nav navbar-right">
+                 <li class="nav-item">
                    <!-- <a class="nav-link" href="Teacher_home.html"><h4><span class="fa fa-phone">Contact</h4></a>-->
                     <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
                 </li>
-                <li><a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a></li>
+                 <li class="nav-item">
+                    <a href="student_main.html"><h4><div id="kickoff1"> </div> </h4></a>
+                </li>
+                <li>
+                  <a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a>
+                </li>
+
               </ul>
 
             </div>
@@ -317,7 +319,7 @@
         
       </div>
 		</div>
-
+<script src="../../js/basic.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
