--- a/MAAS_web_implementation/html/STUDENT/apply_application.html
+++ b/MAAS_web_implementation/html/STUDENT/apply_application.html
@@ -154,16 +154,17 @@
 
               <ul class="nav navbar-nav navbar-right">
 
-                <li class="nav-item">
-                    <a href="student_main.html"><h4><span class="fa fa-user-circle"></span> Ms. Y</h4></a>
-                </li>
-
-
-                <li class="nav-item">
+             	 <li class="nav-item">
                    <!-- <a class="nav-link" href="Teacher_home.html"><h4><span class="fa fa-phone">Contact</h4></a>-->
                     <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
                 </li>
-                <li><a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a></li>
+                 <li class="nav-item">
+                    <a href="student_main.html"><h4><div id="kickoff1"> </div> </h4></a>
+                </li>
+                <li>
+                  <a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a>
+                </li>
+                
               </ul>
 
             </div>
@@ -207,6 +208,7 @@
       <option value="2">CSE-402</option>
       <option value="3">CSE-460</option>
     </select>
+    
     <!-- <select class="browser-default custom-select">
   <option selected>Open this select menu</option>
   <option value="1">One</option>
@@ -282,7 +284,7 @@
       </div>
  
 </div>
-
+<script src="../../js/basic.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
