--- a/MAAS_web_implementation/About.html
+++ b/MAAS_web_implementation/About.html
@@ -35,7 +35,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
 
-      <li><a href="Login_v4/Login_final.html"><h4><span class="glyphicon glyphicon-log-in"></span> Login</h4></a></li>
+      <li><a href="login/Login_final.html"><h4><span class="glyphicon glyphicon-log-in"></span> Login</h4></a></li>
     </ul>
   </div>
 </nav>
