--- a/MAAS_web_implementation/html/STUDENT/apply_application_add.html
+++ b/MAAS_web_implementation/html/STUDENT/apply_application_add.html
@@ -10,7 +10,8 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+     <link rel="styleshee
+     t" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
@@ -91,17 +92,16 @@
 
 
               <ul class="nav navbar-nav navbar-right">
-
-                <li class="nav-item">
-                    <a href="student_main.html"><h4><span class="fa fa-user-circle"></span> Ms. Y</h4></a>
-                </li>
-
-
-                <li class="nav-item">
+                 <li class="nav-item">
                    <!-- <a class="nav-link" href="Teacher_home.html"><h4><span class="fa fa-phone">Contact</h4></a>-->
-                   <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
+                    <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
                 </li>
-                <li><a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a></li>
+                 <li class="nav-item">
+                    <a href="student_main.html"><h4><div id="kickoff1"> </div> </h4></a>
+                </li>
+                <li>
+                  <a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a>
+                </li>
               </ul>
 
             </div>
@@ -111,6 +111,7 @@
 <div class="container">
   <h3>Your Application is successfully submitted.</h3>
 </div>
+<script src="../../js/basic.js"></script>
 <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
