--- a/MAAS_web_implementation/html/STUDENT/attendance.html
+++ b/MAAS_web_implementation/html/STUDENT/attendance.html
@@ -94,15 +94,15 @@
               <ul class="nav navbar-nav navbar-right">
 
                 <li class="nav-item">
-                    <a href="student_main.html"><h4><span class="fa fa-user-circle"></span> Ms. Y</h4></a>
-                </li>
-
-
-                <li class="nav-item">
                    <!-- <a class="nav-link" href="Teacher_home.html"><h4><span class="fa fa-phone">Contact</h4></a>-->
                     <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
                 </li>
-                <li><a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a></li>
+                 <li class="nav-item">
+                    <a href="student_main.html"><h4><div id="kickoff1"> </div> </h4></a>
+                </li>
+                <li>
+                  <a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a>
+                </li>
               </ul>
 
             </div>
@@ -222,7 +222,7 @@
 		</div>
 
 		
-
+<script src="../../js/basic.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
