--- a/MAAS_web_implementation/html/TEACHER/Teacher_home.html
+++ b/MAAS_web_implementation/html/TEACHER/Teacher_home.html
@@ -102,16 +102,16 @@
 
               <ul class="nav navbar-nav navbar-right">
 
-                <li class="nav-item">
-                    <a href="Teacher_home.html"><h4><span class="fa fa-user-circle"></span> Mr. X</h4></a>
-                </li>
-
-
-                <li class="nav-item">
+               <li class="nav-item">
                    <!-- <a class="nav-link" href="Teacher_home.html"><h4><span class="fa fa-phone">Contact</h4></a>-->
                     <a href="../../login/change_password.html"><h4><span class="fa fa-key">Password</h4></a>
                 </li>
-                <li><a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a></li>
+                 <li class="nav-item">
+                    <a href="student_main.html"><h4><div id="kickoff1"> </div> </h4></a>
+                </li>
+                <li>
+                  <a href="../../index.html"><h4><span class="glyphicon glyphicon-log-out"></span> Logout</h4></a>
+                </li>
               </ul>
             </div>
           </div>
@@ -129,7 +129,7 @@
           </div>
           <h1><center><span class="fa fa-user-circle fa-4x" style="color: #5F1947;"></span></center></h1>
 
-          <h2><center>Good Morning!!! Mr. X<br>Hope you are enjoying your day!!<i class="fa fa-smile-o" aria-hidden="true"></i></center></h2>
+          <h2><center> <div id="kickoff2"> </div>Hope you are enjoying your day!!<i class="fa fa-smile-o" aria-hidden="true"></i></center></h2>
 
          
         </div>
@@ -137,6 +137,8 @@
         
       </div>
     </div>
+    <script src="js/Teacher_home.js"></script>
+    <script src="../../js/basic.js"></script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
