--- a/MAAS_web_implementation/html/ADMIN/add_new_delete.html
+++ b/MAAS_web_implementation/html/ADMIN/add_new_delete.html
@@ -182,7 +182,12 @@
 
           <div class="container-fluid">
   <h2>Fill up the followings to remove a person from Database</h2>
-  <form class="form-horizontal" action="apply_application_add.html">
+  
+  <div id="alert_there">
+      
+    </div>
+
+  <form class="form-horizontal">
 
     
 
