--- a/MAAS_web_implementation/html/TEACHER/attendance.html
+++ b/MAAS_web_implementation/html/TEACHER/attendance.html
@@ -199,6 +199,10 @@
     </div>
   </form>
 
+    <div class="col-sm-offset-2 col-sm-12">
+       <button class="btn btn-default" onclick="attendance()"> Submit </button>
+      </div>
+
      
 
 
@@ -297,6 +301,7 @@
         
       </div>
     </div>
+    <script src="js/attendance.js"></script>
 <script src="../../js/basic.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
