--- a/MAAS_web_implementation/html/TEACHER/collegiate.html
+++ b/MAAS_web_implementation/html/TEACHER/collegiate.html
@@ -178,6 +178,10 @@
 </select> -->
       </div>
     </div>
+  </form>
+    <div class="col-sm-offset-2 col-sm-12">
+       <button class="btn btn-default" onclick="collegiate()"> Submit </button>
+      </div>
 <div class="container">
  <br>
  <br>
@@ -235,7 +239,7 @@
         
   </div>
 </div>
-
+<script src="js/collegiate.js"></script>
 <script src="../../js/basic.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
