--- a/MAAS_web_implementation/html/ADMIN/add_new_update.html
+++ b/MAAS_web_implementation/html/ADMIN/add_new_update.html
@@ -183,6 +183,10 @@
         	<!-- <h2>Welcome To Student Dashboard of MIST Automated Attendance System</h2> -->
 
           <div class="container-fluid">
+            <div id="alert_there">
+      
+           </div>
+
              <div class="col-sm-2">
         <input class="form-control" id="s_id" name="date" placeholder="UserID" type="text"/>
       </div>
@@ -217,6 +221,13 @@
       <label class="control-label col-sm-2" for="pass">Enter Password:</label>
       <div class="col-sm-8">
         <input class="form-control" id="pass" name="date" placeholder="Password" type="text"/>
+      </div>
+    </div>
+    
+     <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Enter E-mail:</label>
+      <div class="col-sm-8">
+        <input class="form-control" id="email" name="date" placeholder="E-mail" type="text"/>
       </div>
     </div>
 
