--- a/MAAS_web_implementation/html/TEACHER/application.html
+++ b/MAAS_web_implementation/html/TEACHER/application.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <title>Teacher</title>
      <link rel = "icon" type = "image/png" href = "images/mm.png">
     <meta charset="utf-8">
@@ -14,8 +15,8 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
-  <script src="js/add_new_add.js"></script>
-
+ 
+<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 <script>
 	  // Your web app's Firebase configuration
 	  var firebaseConfig = {
@@ -151,9 +152,20 @@
   <h2>Fill up the followings:</h2>
   <form class="form-horizontal" >
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Select Course:</label>
+      <div id="col-sm-8">
+      	<div id="alert_there">
+      		 <!-- <div class="alert alert-danger" role="alert">
+		        This is a danger alert—check it out!
+		      </div> -->
+      		
+      	</div>
+       
+
+      </div>
+
+      <label class="control-label col-sm-2" for="course">Select Course:</label>
       <div class="col-sm-8">
-        <select class="mdb-select md-form form-control">
+        <select id="course" class="mdb-select md-form form-control">
       <option value="" disabled selected>Choose your option</option>
       <option value="1">CSE-401</option>
       <option value="2">CSE-402</option>
@@ -227,7 +239,7 @@
         </div>
 
         <div class='col-sm-3'>
-            <input class="form-control rounded-0" id="total_application">
+            <input class="form-control rounded-0 disabled" id="total_application">
         </div>
   </div>
 
@@ -246,7 +258,7 @@
 
 
 
-
+ <script src="js/application.js"></script>
 <script src="../../js/basic.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
