--- a/MAAS_web_implementation/html/TEACHER/application_view.html
+++ b/MAAS_web_implementation/html/TEACHER/application_view.html
@@ -128,7 +128,7 @@
 
 <div class="container">
  <br><br>
-<button onclick="genarate_pdf()">view as pdf</button>
+<button onclick="genarate_pdf()" class="btn btn-primary" >view as pdf</button>
  <div class="row">
         <div class='col-sm-7'>
           <h4 style="font-size: 16pt"> <u>Application Date :</u>  <b><div id="App_date">  </div></b>  </h4>
@@ -136,10 +136,15 @@
             <h4 style="font-size: 16pt"> <u>Applicant's Name :</u>   <b><div id="App_name" >  </div></b>   </h4>
             
             <h4 style="font-size: 16pt"> <u>Course Name :</u>   <b><div id="App_course">  </div></b>  </h4>
-            <h4 style="font-size: 16pt"> <u>Reason For Absence :</u>  </h4>
+            <h4 style="font-size: 16pt"> <u>Duration :</u>   <b><div id="App_duration">  </div></b>  </h4>
+            <h4 style="font-size: 16pt"> <u>Absent From :</u>   <b><div id="App_absent_from">  </div></b>  </h4>
+            <h4 style="font-size: 16pt"> <u>Absnt Till :</u>   <b><div id="App_absent_till">  </div></b>  </h4>
+            <h4 style="font-size: 16pt"> <u>Reason :</u>   <b><div id="rsn">  </div></b>  </h4>
+
+           <!--  <h4 style="font-size: 16pt"> <u>Reason For Absence :</u>  </h4>
             
-         <textarea style="font-size: 16pt" cols="70" rows="8" id="rsn"></textarea>
-         <div class="text-right"><a id="anch" href="#" target="_blank"> <h4>Attachments(prescription)</h4> </a></div>
+         <textarea style="font-size: 16pt" cols="70" rows="8" id="rsn"></textarea> -->
+         <div class="text-left"><a id="anch" href="#" target="_blank"> <h4>Attachments(prescription)</h4> </a></div>
         </div>
        <!--  <div class='col-sm-1'>
             <h4><center><b>Date</b></center></h4>
