All excecption handling done

--- a/MAAS_web_implementation/login/forgot_password.html
+++ b/MAAS_web_implementation/login/forgot_password.html
@@ -48,6 +48,7 @@
 	</script>
 	<script src="js/forgot_pass.js"></script>
 	<script src="../html/STUDENT/js/eligibility.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
 	
 
 <body>
