--- a/MAAS_web_implementation/html/STUDENT/student_main.html
+++ b/MAAS_web_implementation/html/STUDENT/student_main.html
@@ -32,10 +32,9 @@
 				<!-- <img class="img-fluid" src="final.png" alt="..." class="img-thumbnail"> -->
  <div class="container-fluid">
 
-           <button type="button" id="sidebarCollapse" class="btn btn-primary">
-            <!--  <i class="fa fa-bars"></i> 
-             <span class="sr-only">Toggle Menu</span>-->
-             <span class="glyphicon glyphicon-circle-arrow-right"></span>
+           
+           <button type="button" id="sidebarCollapse"  class="btn btn-outline-success">
+              <i class="fa fa-bars fa-2x"></i> 
             </button>
             <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
