--- a/MAAS_web_implementation/html/TEACHER/application.html
+++ b/MAAS_web_implementation/html/TEACHER/application.html
@@ -51,17 +51,17 @@
 
        <div class="container-fluid">
 
-           <button type="button" id="sidebarCollapse" class="btn btn-primary">
-            <!--  <i class="fa fa-bars"></i> 
-             <span class="sr-only">Toggle Menu</span>-->
-             <span class="glyphicon glyphicon-circle-arrow-right"></span>
+           <button type="button" id="sidebarCollapse"  class="btn btn-outline-success">
+              <i class="fa fa-bars fa-2x"></i> 
+             <span class="sr-only">Toggle Menu</span>
+             <!-- <span class="glyphicon glyphicon-circle-arrow-right"></span> -->
             </button>
             <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
         </div>
 
-        <h3><a href="index.html" class="logo">MAAS</a></h3>
+        <h3>MAAS</a></h3>
         <ul class="list-unstyled components mb-5">
           <li class="active cl_hover_btn">
             <a href="Teacher_home.html"><span class="fa fa-home"></span> Home</a>
