Admin dashboard done

--- a/MAAS_web_implementation/html/TEACHER/application.html
+++ b/MAAS_web_implementation/html/TEACHER/application.html
@@ -164,7 +164,7 @@
       </div>
 
       <label class="control-label col-sm-2" for="course">Select Course:</label>
-      <div class="col-sm-8">
+      <div class="col-sm-4">
         <select id="course" class="mdb-select md-form form-control">
       <option value="" disabled selected>Choose your option</option>
       <option value="1">CSE-401</option>
@@ -203,12 +203,16 @@
 
 <div  class="container">
 
- <div class="row">
+  <div id="detailed_content2">
+    <div class="row">
         <div class='col-sm-6'>
             <h3><center> <strong>Application list :</strong> </center></h3>
         </div>
         <br><br><br>
+   </div>
   </div>
+
+ 
   <div class="row">
 
         <div class='col-sm-2'>
@@ -233,15 +237,21 @@
 
 <br>
 
+<div id="detailed_content">
+
   <div class="row">
         <div class='col-sm-2'>
             <h4>Total Applications :</h4>
         </div>
 
-        <div class='col-sm-3'>
-            <input class="form-control rounded-0 disabled" id="total_application">
+        <div class='col-sm-3' id="total_application">
+            <!-- <input class="form-control rounded-0 disabled" id="total_application"> -->
         </div>
   </div>
+
+</div>
+
+  
 
  <br><br><br><br><br><br>
 
