--- a/MAAS_web_implementation/html/STUDENT/attendance.html
+++ b/MAAS_web_implementation/html/STUDENT/attendance.html
@@ -69,9 +69,20 @@
           <li class="active cl_hover_btn">
             <a href="fine.html"><span class="fa fa-money"></span> Fine</a>
           </li>
-          <li class="active cl_hover_btn">
-            <a href="apply_application.html"><span class="fa fa-file-text-o"></span> Application</a>
-          </li>
+          
+            <li>
+             <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span class="fa fa-file-text-o"></span> Application </a>
+              <ul class="collapse list-unstyled" id="pageSubmenu">
+                <li class="active cl_hover_btn ">
+                    <a href="apply_application.html">Apply</a>
+                </li>
+                <li class="active cl_hover_btn ">
+                    <a href="application_status.html">Status</a>
+                </li>
+                
+              </ul>
+            </li>
+
         </ul>
 
         <div class="footer">
