--- a/MAAS_web_implementation/html/STUDENT/fine.html
+++ b/MAAS_web_implementation/html/STUDENT/fine.html
@@ -13,6 +13,7 @@
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
   </head>
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 <script>
@@ -194,6 +195,8 @@
   <div id="table_content">
     
   </div>
+  <br>
+<canvas id="myChart"></canvas>
   <!-- <table class="table table-striped" border="1">
     <thead class="thead-light">
       <tr>
@@ -233,7 +236,8 @@
       </div>
     </div>
     <div>
-      Your Total Fine :4500
+     <!--  Your Total Fine :4500 -->
+      
     </div>
   <script src="js/fine.js"></script>
 <script src="../../js/basic.js"></script>
