--- a/MAAS_web_implementation/html/TEACHER/application.html
+++ b/MAAS_web_implementation/html/TEACHER/application.html
@@ -17,6 +17,7 @@
   </head>
  
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-storage.js"></script>
 <script>
 	  // Your web app's Firebase configuration
 	  var firebaseConfig = {
