--- a/MAAS_web_implementation/html/ADMIN/view_individual_attendance.html
+++ b/MAAS_web_implementation/html/ADMIN/view_individual_attendance.html
@@ -262,6 +262,7 @@
         <button onclick="individual_attendance()" type="submit" class="btn btn-default">Submit</button>
       </div>
     </div>
+    <div id="loader"> </div>
 <br>
 <br>
 <br>
@@ -273,45 +274,6 @@
         	
         </div>
 
-        <!-- <table class="table table-striped" border="1">
-    <thead class="thead-light">
-      <tr class="bg-success">
-        <th>Course Name</th>
-        <th>Course Code</th>
-        <th>Type</th>
-        <th>Date</th>
-        <th>Time</th>
-        <th>Status</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr >
-        <td>SADD</td>
-        <td>CSE-401</td>
-        <td>THEORY</td>
-        <td>19/02/2020</td>
-        <td>08:00-08:55</td>
-        <td>PRESENT</td>
-      </tr>
-      <tr >
-        <td>SADD</td>
-        <td>CSE-401</td>
-        <td>THEORY</td>
-        <td>19/02/2020</td>
-        <td>09:00-08:55</td>
-        <td>PRESENT</td>
-      </tr>
-      <tr >
-         <td>SADD</td>
-        <td>CSE-401</td>
-        <td>THEORY</td>
-        <td>19/02/2020</td>
-        <td>10:00-10:55</td>
-        <td>ABSENT</td>
-      </tr>
-    </tbody>
-  </table> -->
       </div>
 
 
