--- a/MAAS_web_implementation/html/STUDENT/application_status.html
+++ b/MAAS_web_implementation/html/STUDENT/application_status.html
@@ -186,6 +186,8 @@
 
   
             </div>
+            <div id="loader"> </div>
+
 
              <!-- <table id="table" class="table table-striped" border="1">
               <thead class="thead-light">
