--- a/MAAS_web_implementation/html/STUDENT/attendance.html
+++ b/MAAS_web_implementation/html/STUDENT/attendance.html
@@ -169,12 +169,7 @@
       <option value="2">Level-4,Term-2</option>
       <option value="3">Level-3,Term-2</option>
     </select>
-    <!-- <select class="browser-default custom-select">
-  <option selected>Open this select menu</option>
-  <option value="1">One</option>
-  <option value="2">Two</option>
-  <option value="3">Three</option>
-</select> -->
+ 
       </div>
     </div>
 
@@ -190,12 +185,7 @@
       <option value="2">CSE-460(HW)</option>
       <option value="3">CSE-401</option>
     </select>
-    <!-- <select class="browser-default custom-select">
-  <option selected>Open this select menu</option>
-  <option value="1">One</option>
-  <option value="2">Two</option>
-  <option value="3">Three</option>
-</select> -->
+   
       </div>
     </div>
 
@@ -204,11 +194,12 @@
 
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button onclick="attendance()" type="submit" class="btn btn-default">Submit</button>
+        <button id="mybtn"  onclick="attendance()" type="submit" class="btn btn-default">Search</button>
       </div>
     </div>
  
 
+<div id="loader"> </div>
 
 <br>
 <br>
