--- a/MAAS_web_implementation/html/STUDENT/eligibility.html
+++ b/MAAS_web_implementation/html/STUDENT/eligibility.html
@@ -42,6 +42,8 @@
       background-color: #3B5998;
       color: white
     }
+   
+
   </style>
   <body>
     
@@ -167,39 +169,20 @@
       <option value="2">Level-4,Term-2</option>
       <option value="3">Level-3,Term-2</option>
     </select>
-    <!-- <select class="browser-default custom-select">
-  <option selected>Open this select menu</option>
-  <option value="1">One</option>
-  <option value="2">Two</option>
-  <option value="3">Three</option>
-</select> -->
       </div>
     </div>
-
     </form>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
         <button onclick="eligibility()" type="submit" class="btn btn-default">Submit</button>
       </div>
     </div>
-
- <br>
- <br>
- <br>
-
-<!--   <button onclick="test()">Click</button> -->
-<div id="table_content">
-
-
-  </table>
-
-
-
+    <div id="loader"></div>
+<br><br><br>
+<div id="table_content"></table>
 </div>
 <br>
 <canvas id="myChart"></canvas>
-
-        
       </div>
     </div>
 <script src="js/eligibility.js"></script>   
