--- a/MAAS_web_implementation/html/TEACHER/collegiate.html
+++ b/MAAS_web_implementation/html/TEACHER/collegiate.html
@@ -186,7 +186,7 @@
        <button class="btn btn-default" onclick="collegiate()"> Submit </button>
       </div>
 <div >
-
+<div id="loader"> </div>
  <br>
  <br>
  <br>
